--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="userImageContentDescription">The user\'s image</string>
 
     <string name="title_activity_main">Tweeter</string>
+    <string name="title_activity_user">User</string>
     <string name="loadingData">Loading More Data…</string>
     <string name="feedTabTitle">Feed</string>
     <string name="storyTabTitle">Story</string>
@@ -18,4 +19,5 @@
     <string name="title_activity_login">Sign in</string>
     <string name="followeeCount">Following: %d</string>
     <string name="followerCount">Followers: %d</string>
+    <string name="follow">Follow</string>
 </resources>
